@@ -71,8 +71,8 @@ import java.util.StringTokenizer;
  *   &lt;property name="groovy.home" value="/Path/To/Groovy"/&gt;
  *   &lt;property name="groovy.version" value="X.Y.Z"/&gt;
  *   &lt;path id="groovy.classpath"&gt;
- *     &lt;fileset dir="${groovy.home}/embeddable"&gt;
- *       &lt;include name="groovy-all-${groovy.version}.jar" /&gt;
+ *     &lt;fileset dir="${groovy.home}/lib"&gt;
+ *       &lt;include name="groovy-*${groovy.version}.jar" /&gt;
  *     &lt;/fileset&gt;
  *   &lt;/path&gt;
  *   &lt;taskdef name="groovyc" classname="org.codehaus.groovy.ant.Groovyc" classpathref="groovy.classpath"/&gt;
@@ -135,8 +135,8 @@ import java.util.StringTokenizer;
  *   &lt;property name="groovy.version" value="X.Y.Z"/&gt;
  *
  *   &lt;path id="groovy.classpath"&gt;
- *     &lt;fileset dir="${groovy.home}/embeddable"&gt;
- *       &lt;include name="groovy-all-${groovy.version}.jar" /&gt;
+ *     &lt;fileset dir="${groovy.home}/lib"&gt;
+ *       &lt;include name="groovy-*${groovy.version}.jar" /&gt;
  *     &lt;/fileset&gt;
  *   &lt;/path&gt;
  *
@@ -163,10 +163,12 @@ import java.util.StringTokenizer;
  * <p>
  * Based on the implementation of the Javac task in Apache Ant.
  * <p>
- * Can also be used from {@link groovy.util.AntBuilder} to allow the build file to be scripted in Groovy.
+ * Can also be used from {@link groovy.ant.AntBuilder} to allow the build file to be scripted in Groovy.
  */
 public class Groovyc extends MatchingTask {
     private static final URL[] EMPTY_URL_ARRAY = new URL[0];
+    private static final File[] EMPTY_FILE_ARRAY = new File[0];
+    private static final String[] EMPTY_STRING_ARRAY = new String[0];
     private final LoggingHelper log = new LoggingHelper(this);
 
     private Path src;
@@ -188,7 +190,7 @@ public class Groovyc extends MatchingTask {
 
     protected boolean failOnError = true;
     protected boolean listFiles = false;
-    protected File[] compileList = new File[0];
+    protected File[] compileList = EMPTY_FILE_ARRAY;
 
     private String updatedProperty;
     private String errorProperty;
@@ -213,6 +215,11 @@ public class Groovyc extends MatchingTask {
      * If true, generates metadata for reflection on method parameter names (jdk8+ only).  Defaults to false.
      */
     private boolean parameters = false;
+
+    /**
+     * If true, enable preview Java features (JEP 12) (jdk12+ only). Defaults to false.
+     */
+    private boolean previewFeatures = false;
 
     /**
      * Adds a path for source compilation.
@@ -824,6 +831,22 @@ public class Groovyc extends MatchingTask {
     }
 
     /**
+     * If true, enable preview Java features (JEP 12) (jdk12+ only).
+     *
+     * @param previewFeatures set to true to enable preview features
+     */
+    public void setPreviewFeatures(boolean previewFeatures) {
+        this.previewFeatures = previewFeatures;
+    }
+
+    /**
+     * Returns true if preview features has been enabled.
+     */
+    public boolean getPreviewFeatures() {
+        return previewFeatures;
+    }
+
+    /**
      * Executes the task.
      *
      * @throws BuildException if an error occurs
@@ -860,7 +883,7 @@ public class Groovyc extends MatchingTask {
      * Clear the list of files to be compiled and copied.
      */
     protected void resetFileLists() {
-        compileList = new File[0];
+        compileList = EMPTY_FILE_ARRAY;
         scriptExtensions = new LinkedHashSet<String>();
     }
 
@@ -1100,6 +1123,9 @@ public class Groovyc extends MatchingTask {
         if (parameters) {
             commandLineList.add("--parameters");
         }
+        if (previewFeatures) {
+            commandLineList.add("--enable-preview");
+        }
         if (useIndy) {
             commandLineList.add("--indy");
         }
@@ -1149,7 +1175,7 @@ public class Groovyc extends MatchingTask {
 
     private String[] makeCommandLine(List<String> commandLineList) {
         log.verbose("Compilation arguments:\n" + DefaultGroovyMethods.join((Iterable)commandLineList, "\n"));
-        return commandLineList.toArray(new String[0]);
+        return commandLineList.toArray(EMPTY_STRING_ARRAY);
     }
 
     private void runForked(String[] commandLine) {
