@@ -24,7 +24,7 @@ import junit.framework.Test;
 import junit.framework.TestCase;
 import junit.framework.TestSuite;
 import org.codehaus.groovy.control.CompilationFailedException;
-import org.codehaus.groovy.runtime.ScriptTestAdapter;
+import org.apache.groovy.test.ScriptTestAdapter;
 
 import java.io.File;
 import java.io.IOException;
@@ -45,11 +45,8 @@ import java.util.logging.Logger;
  * When setting the log level of this class to FINEST, all file loading will be logged.
  * <p>
  * See also groovy.util.AllTestSuiteTest.groovy
- *
- * @author Andrew Glover
- * @author Dierk Koenig
- * @author Paul King
  */
+@Deprecated
 public class AllTestSuite extends TestSuite {
 
     /**
@@ -96,8 +93,7 @@ public class AllTestSuite extends TestSuite {
     static { // this is only needed since the Groovy Build compiles *.groovy files after *.java files
         try {
             // TODO: dk: make FileNameFinder injectable
-            Class finderClass = Class.forName("groovy.util.FileNameFinder");
-            finder = (IFileNameFinder) finderClass.newInstance();
+            finder = (IFileNameFinder) Class.forName("groovy.ant.FileNameFinder").getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             throw new RuntimeException("Cannot find and instantiate class FileNameFinder", e);
         }
